cabal-version:       2.2
name:                bench
version:             0
build-type:          Simple

library
  build-depends: base
  default-language: Haskell2010

library elem-int
  default-language: Haskell2010
  hs-source-dirs: unpacked-int-fingertree
  exposed-modules: Int
  build-depends: base

benchmark time
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Time.hs
  build-depends:     base
                   , bytestring, directory
                   , vector
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
                   , csv
                   , vector-algorithms
                   , random
                   , elem-int
                   , unpacked-fingertree
                   , hw-fingertree
  mixins: unpacked-fingertree (FingerTree as Int.FingerTree) requires (Measured as Int)

executable report
  default-language: Haskell2010
  ghc-options:       -Wall -O2 -rtsopts
  main-is:           Report.hs
  build-depends:     base
                   , bytestring, directory
                   , vector
                   , ghc-prim
                   , criterion
                   , deepseq
                   , containers
                   , csv
                   -- DEBUG
                   , random
                   , vector-algorithms
